[gd_scene load_steps=22 format=3 uid="uid://c3x07k8w8x8u7"]

[ext_resource type="Script" path="res://scripts/ui/title.gd" id="1_jo4cx"]
[ext_resource type="Texture2D" uid="uid://ck0bh7ojdamwf" path="res://assets/ui/title.gif" id="2_sn5vp"]
[ext_resource type="Texture2D" uid="uid://dq7iqad1bptmr" path="res://assets/background/title_final_frame.png" id="3_3oe6d"]
[ext_resource type="Theme" uid="uid://dejysjjwhwal8" path="res://data/theme/title_theme.tres" id="3_iwt76"]
[ext_resource type="VideoStream" path="res://assets/background/title_video.ogv" id="3_u1cnr"]
[ext_resource type="Texture2D" uid="uid://qxvnllv4qv1j" path="res://assets/ui/button_start.png" id="5_hhkr5"]
[ext_resource type="Texture2D" uid="uid://bfkue8fbqvncp" path="res://assets/ui/button_hover_start.png" id="6_0t4pn"]
[ext_resource type="Texture2D" uid="uid://caq7n2f6k2mff" path="res://assets/ui/button_continue.png" id="7_04ila"]
[ext_resource type="Texture2D" uid="uid://cu7xcqg8p0o0m" path="res://assets/ui/button_hover_continue.png" id="8_jg3j2"]
[ext_resource type="Texture2D" uid="uid://dhvrk6i64qpg3" path="res://assets/ui/button_settings.png" id="9_s6pqd"]
[ext_resource type="Texture2D" uid="uid://c7qdwgm0vh0ig" path="res://assets/ui/button_hover_settings.png" id="10_14nqu"]
[ext_resource type="Texture2D" uid="uid://de1l6yutm24ah" path="res://assets/ui/button_continue_disabled.png" id="10_dhdar"]
[ext_resource type="Texture2D" uid="uid://ck34tvfbu5b42" path="res://assets/ui/button_quit_game.png" id="11_m3oec"]
[ext_resource type="Texture2D" uid="uid://0db4lukie287" path="res://assets/ui/button_hover_quit.png" id="12_nq65w"]
[ext_resource type="Texture2D" uid="uid://dsjqfc573jc5h" path="res://assets/ui/menu_window_2.png" id="13_1kk7j"]
[ext_resource type="Texture2D" uid="uid://bueugk36ealoc" path="res://assets/ui/button_settings_diabled.png" id="13_gtvrh"]
[ext_resource type="Texture2D" uid="uid://ds3twq6jybefi" path="res://assets/ui/button_back.png" id="14_bbply"]
[ext_resource type="Texture2D" uid="uid://ctwmo624chd6t" path="res://assets/ui/button_hover_back.png" id="16_xof4u"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6mo78"]
texture = ExtResource("13_1kk7j")

[sub_resource type="Theme" id="Theme_li62p"]
Panel/styles/panel = SubResource("StyleBoxTexture_6mo78")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6llu"]
bg_color = Color(1, 1, 1, 1)

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_iwt76")
script = ExtResource("1_jo4cx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
scale = Vector2(0.6, 0.6)

[node name="LastFrame" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("3_3oe6d")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="MarginContainer"]
layout_mode = 2
stream = ExtResource("3_u1cnr")

[node name="Title" type="Sprite2D" parent="MarginContainer"]
position = Vector2(960, 300)
scale = Vector2(1.06998, 1.08616)
texture = ExtResource("2_sn5vp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 463.0
offset_top = 330.0
offset_right = 546.0
offset_bottom = 426.0
scale = Vector2(3, 3)

[node name="NewButton" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(80, 16)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("5_hhkr5")
texture_hover = ExtResource("6_0t4pn")
ignore_texture_size = true

[node name="ContinueButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
texture_normal = ExtResource("7_04ila")
texture_hover = ExtResource("8_jg3j2")
texture_disabled = ExtResource("10_dhdar")

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
texture_normal = ExtResource("9_s6pqd")
texture_hover = ExtResource("10_14nqu")
texture_disabled = ExtResource("13_gtvrh")

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("11_m3oec")
texture_hover = ExtResource("12_nq65w")

[node name="NameInputPopup" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.0
offset_top = -138.0
offset_right = 251.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_li62p")

[node name="LineEdit" type="LineEdit" parent="NameInputPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -23.5
offset_right = 130.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.94902, 0.368627, 0.576471, 1)
theme_override_colors/font_placeholder_color = Color(0.94902, 0.368627, 0.576471, 0.313726)
theme_override_colors/caret_color = Color(0.94902, 0.368627, 0.576471, 1)
theme_override_colors/selection_color = Color(1, 0.627451, 0.666667, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_i6llu")
theme_override_styles/focus = SubResource("StyleBoxFlat_i6llu")
placeholder_text = "Enter Name"
alignment = 1
max_length = 8
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="ConfirmButton" type="Button" parent="NameInputPopup"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -63.0
offset_top = -84.0
offset_right = 61.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 0
text = "Confirm"
flat = true

[node name="BackButton" type="TextureButton" parent="NameInputPopup"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -13.0
offset_right = -40.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(3, 3)
texture_normal = ExtResource("14_bbply")
texture_hover = ExtResource("16_xof4u")
stretch_mode = 4

[connection signal="finished" from="MarginContainer/VideoStreamPlayer" to="." method="_on_video_finished"]
[connection signal="pressed" from="VBoxContainer/NewButton" to="." method="_on_new_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="NameInputPopup/ConfirmButton" to="." method="_on_name_confirm_pressed"]
[connection signal="pressed" from="NameInputPopup/BackButton" to="." method="_on_back_button_pressed"]
